--- a/NETFLIX.html
+++ b/NETFLIX.html
@@ -13,7 +13,7 @@
         padding: 0px;
     }
     body{
-        background: url(/public/image/netflixx\ \(1\).jpg);
+        background: url(https://ibb.co/WWT7MLB3);
         color: white;
         background-size: cover;
         min-height: 100vh;
