--- a/NETFLIX.html
+++ b/NETFLIX.html
@@ -13,7 +13,7 @@
         padding: 0px;
     }
     body{
-        background: url(https://ibb.co/WWT7MLB3);
+        background: url(https://i.ibb.co/27bRCTc6/Whats-App-Image-2026-01-07-at-10-23-48.jpg);
         color: white;
         background-size: cover;
         min-height: 100vh;
